@@ -1,4 +1,4 @@
-/* $Id: deliver-smtp.c,v 1.52 2007-07-11 13:33:57 nicm Exp $ */
+/* $Id: deliver-smtp.c,v 1.53 2007-08-18 12:19:43 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -142,7 +142,8 @@ deliver_smtp_deliver(struct deliver_ctx *dctx, struct actitem *ti)
 				goto error;
 			line_init(m, &ptr, &len);
 			while (ptr != NULL) {
-				io_write(io, ptr, len - 1);
+				if (len > 1)
+					io_write(io, ptr, len - 1);
 				io_writeline(io, NULL);
 
 				/* Update if necessary. */
