@@ -1,3 +1,8 @@
+18 August 2007
+
+* Make SMTP delivery work again (blank lines were failing a length check in
+  buffer_add from io_write). SF bug 1776786.
+
 16 August 2007
 
 * Remove header action now allows fnmatch patterns.
@@ -537,4 +542,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.141 2007-08-16 10:22:34 nicm Exp $
+$Id: CHANGES,v 1.142 2007-08-18 12:19:43 nicm Exp $
